# ntl_edu

./: .gitignore  README.md  text.md
SQL/: 1.drawio
game_of_life/: Source.cpp  game_of_life.sln  game_of_life.vcxproj
netology_hw2.1.1/: netology_hw2.1.1.cpp  netology_hw2.1.1.sln  netology_hw2.1.1.vcxproj  out.txt
netology_hw2.10.1_cmake/: CMakeLists.txt  my_first_cmake_project.cpp
netology_hw2.10.2_cmake/: CMakeLists.txt  Equilateral_triangle.cpp  Equilateral_triangle.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.h  Rectangle.cpp  Rhombus.cpp  Rhombus.h  Right_triangle.h  Square.h  Triangle.h  Uncorrect_Figure.h
netology_hw2.11.1/: Greeter.cpp  Greeter.h  netology_hw2.11.1.sln  netology_hw2.11.1.vcxproj
netology_hw2.11.2/: netology_hw2.11.2.sln
netology_hw2.11.3/: CMakeLists.txt  Leaver.h
netology_hw2.2.1/: netology_hw2.2.1.cpp  netology_hw2.2.1.sln  netology_hw2.2.1.vcxproj
netology_hw2.2.2/: netology_hw2.2.2.cpp  netology_hw2.2.2.sln  netology_hw2.2.2.vcxproj
netology_hw2.2.3/: netology_hw2.2.3.cpp  netology_hw2.2.3.sln  netology_hw2.2.3.vcxproj
netology_hw2.3.1/: netology_hw2.3.1.cpp  netology_hw2.3.1.sln  netology_hw2.3.1.vcxproj
netology_hw2.3.2/: netology_hw2.3.2.cpp  netology_hw2.3.2.sln  netology_hw2.3.2.vcxproj
netology_hw2.4.1/: netology_hw2.4.1.cpp  netology_hw2.4.1.sln  netology_hw2.4.1.vcxproj  out.txt
netology_hw2.4.2/: in.txt  netology_hw2.4.2.cpp  netology_hw2.4.2.sln  netology_hw2.4.2.vcxproj  out.txt
netology_hw2.5.1/: netology_hw2.5.1.cpp  netology_hw2.5.1.sln  netology_hw2.5.1.vcxproj
netology_hw2.5.2/: netology_hw2.5.2.cpp  netology_hw2.5.2.sln  netology_hw2.5.2.vcxproj
netology_hw2.5.3/: netology_hw2.5.3.cpp  (+2 more)
netology_hw3.4.1_cmake/: CMakeLists.txt  netology_hw3.4.1_cmake.cpp  netology_hw3.4.1_cmake.h
netology_hw3.4.2_cmake/: CMakeLists.txt  Double_linked_list.cpp  netology_hw3.4.2_cmake.cpp  netology_hw3.4.2_cmake.h
(+186 files in other folders)
